Update fqs sources

--- a/fqs/fqs.html
+++ b/fqs/fqs.html
@@ -7,7 +7,7 @@
 </head>
 
 <body>
-<p>Build: main-c289edb</p>
+<p>Build: main-9bf172f-dirty</p>
 	<div id="player"></div>
 	<div style="margin-left: 5%; margin-right: 5%;">
 		<h1>FQS Notation Demo</h1>
