Update fqs sources

--- a/fqs/fqs.html
+++ b/fqs/fqs.html
@@ -7,7 +7,7 @@
 </head>
 
 <body>
-<p>Build: main-0767888</p>
+<p>Version: v1.0.0 Build: main-3e80a48</p>
 	<div id="player"></div>
 	<div style="margin-left: 5%; margin-right: 5%;">
 		<h1>FQS Notation Demo</h1>
