Update fqs sources

--- a/fqs/ytpdf.html
+++ b/fqs/ytpdf.html
@@ -19,6 +19,19 @@
 </html>
 
 <style>
+	/* ensure pdf is full-width */
+	#pdf-container {
+		width: 100%;
+		margin: 0;
+		padding: 0;
+	}
+
+	/* ensure page body is full-width */
+	body {
+		margin: 0;
+		padding: 0;
+	}
+
 	#mode-toolbar {
 		display: flex;
 		gap: 8px;
