Update simplerecorder sources

--- a/simplerecorder/index.html
+++ b/simplerecorder/index.html
@@ -20,7 +20,7 @@
 			/* M, */
 			align-items: center;
 			justify-content: center;
-			min-height: 100vh;
+			max-height: 100vh;
 		}
 
 		.container {
@@ -37,11 +37,11 @@
 
 
 		.button {
-			width: 35vw;
+			width: 25vh;
 			/* 35% of viewport width */
-			height: 35vw;
+			height: 25vh;
 			/* 20% of viewport height */
-			border-radius: 5vw;
+			border-radius: 5vh;
 			border: none;
 			font-size: 16px;
 			font-weight: 600;
@@ -153,7 +153,7 @@
 		<div id="error" class="error"></div>
 
 		<footer style="margin-top: 40px; color: #8e8e93; font-size: 12px;">
-			Version 1.0.3 <a href="https://github.com/michael-f-ellis/SimpleRecorder" target="_blank">Source Code</a>
+			Version 1.0.4 <a href="https://github.com/michael-f-ellis/SimpleRecorder" target="_blank">Source Code</a>
 		</footer>
 
 	</div>
